# SynthEngine2.2

./: .gitignore  CMakeLists.txt  readme
maestro/: CMakeLists.txt  MSEngine.cpp  MSEngine.h  MSInstNode.cpp  MSInstNode.h  MSInstrument.cpp  MSInstrument.h  MSM.cpp  MSM.h  MSModel.cpp  MSModel.h  oboe.mf.C6Ab6-7-706.msm  parse_msm.c  synth - Copy.cpp  synth.cpp  synth.h  synth2.cpp  synth2.h  synth_main.cpp  synthmain  test.cpp  tester
maestro/SynthDll/: SynthDll.sln
maestro/SynthDll/Debug/: SynthDll.exp  SynthDll.ilk  SynthDll.lib
maestro/SynthDll/SynthDll/: ReadMe.txt  SynthDll.vcxproj  SynthDll.vcxproj.filters  stdafx.cpp
maestro/SynthDll/SynthDll/Debug/: vc140.idb
maestro/SynthDll/SynthDll/Debug/SynthDll.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SynthDll.lastbuildstate  SynthDll.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
rtaudio-5.0.0/tests/Windows/: UpgradeLog.htm  audioprobe.ilk  audioprobe.sln  audioprobe.vcxproj  audioprobe.vcxproj.filters
rtaudio-5.0.0/tests/Windows/Debug/: vc140.idb
rtaudio-5.0.0/tests/Windows/Debug/audioprobe.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  audioprobe.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
